# flutter-rsa

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  analysis_options.yaml  pubspec.yaml
.github/: FUNDING.yml
.github/workflows/: drive.yml  drive_android.yml  drive_browser.yml  drive_ios.yml  drive_linux.yml  drive_macos.yml  drive_windows.yml  example-docker.yml  hover.yml  pub.yml  release.yml  tests_android.yml  tests_browser.yml  tests_ios.yml  tests_linux.yml  tests_macos.yml  tests_windows.yml
android/: build.gradle  settings.gradle
example/: Dockerfile  README.md  example.code-workspace  pubspec.yaml
example/android/: .gitignore
example/docker/: nginx.conf
example/go/: go.mod  go.sum
example/integration_test/: app_test.dart
example/ios/: .gitignore
example/lib/: base64.dart  convert_jwt.dart  convert_keypair.dart  convert_private.dart  convert_public.dart  encrypt_decrypt_oaep.dart  encrypt_decrypt_oaep_bytes.dart  encrypt_decrypt_pkcs.dart  encrypt_decrypt_pkcs_bytes.dart  encrypt_sign_pkcs.dart  encrypt_sign_pkcs_bytes.dart  encrypt_sign_pss.dart  encrypt_sign_pss_bytes.dart  generate.dart  hash.dart  main.dart  main_desktop.dart
example/linux/: CMakeLists.txt  my_application.cc  window_configuration.cc
example/macos/: Podfile
example/test/: app_test.dart  generate_test.dart  widget_test.dart
example/test_driver/: app.dart  app_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
fast_rsa/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
fast_rsa/example/: pubspec.yaml
fast_rsa/go/: go.mod  plugin.go
fast_rsa_hover/: README.md  go.mod  go.sum  main.go
fast_rsa_linux/: README.md  pubspec.yaml
fast_rsa_linux/linux/: Makefile  fast_rsa_linux_plugin.cc  fast_rsa_linux_plugin.h  plugin_configuration.mk  rsa.h  rsa_bridge.cpp  rsa_bridge.h
fast_rsa_macos/: .gitignore  .metadata  README.md  pubspec.yaml
fast_rsa_macos/macos/: fast_rsa_macos.podspec  rsa.podspec
fast_rsa_web/: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  CHANGELOG.md  README.md  pubspec.yaml
fast_rsa_web/lib/: rsa_web.dart
go/: README.md  go.mod  go.sum  plugin.go
ios/: fast_rsa.podspec  rsa.podspec
ios/Classes/: FastRsaPlugin.h  FastRsaPlugin.m  FastRsaPlugin.swift  RsaPlugin.h  RsaPlugin.m  SwiftFastRsaPlugin.swift
ios/RSABridge.xcframework/: Info.plist
ios/Rsa.xcframework/: Info.plist
lib/: fast_rsa.dart  fast_rsa_bridge.dart  fast_rsa_sync.dart  hash.dart  key_pair.dart  rsa.dart
lib/assets/: rsa.text  (+1 more)
linux/: CMakeLists.txt  fast_rsa_plugin.cc  fast_rsa_plugin.h  plugin_configuration.mk  rsa.h
linux/include/fast_rsa/: fast_rsa_plugin.h
linux/shared/aarch64/: librsa_bridge.h
macos/: fast_rsa.podspec  librsa_bridge.h
scripts/: upgrade_bridge_flatbuffers.sh  upgrade_bridge_libs.sh  upgrade_bridge_protobuf.sh
windows/: CMakeLists.txt  fast_rsa_plugin.cpp
windows/include/fast_rsa/: fast_rsa_plugin.h
windows/shared/: librsa_bridge.h
(+85 files in other folders)
